Add devDependency: typescript

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Sigsign <sig@signote.cc>",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@cloudflare/wrangler": "^1.19.11"
+    "@cloudflare/wrangler": "^1.19.11",
+    "typescript": "^4.6.3"
   }
 }
