--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@cloudflare/wrangler": "^1.19.11",
+    "eslint": "^8.11.0",
     "typescript": "^4.6.3"
   }
 }
