--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "version": "0.1.0",
   "author": "Sigsign <sig@signote.cc>",
   "license": "Apache-2.0",
+  "scripts": {
+    "build": "tsc",
+    "lint": "eslint src/**/*"
+  },
   "devDependencies": {
     "@cloudflare/wrangler": "^1.19.11",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
