--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src/**/*"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.4.0",
     "@cloudflare/wrangler": "^1.19.11",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
