--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,2 +1,12 @@
-type = "javascript"
 name = "closing-site"
+type = "javascript"
+zone_id = ""
+account_id = ""
+route = ""
+workers_dev = true
+compatibility_date = "2022-03-25"
+
+[build]
+command = "npm ci && npm run build"
+[build.upload]
+format = "service-worker"
