--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "tsc --outDir dist/",
-    "lint": "eslint src/**/*"
+    "lint": "eslint src/**/*",
+    "publish": "wrangler publish"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.4.0",
